--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <img id="sit" src="images/sit.jpg">
       <img id="stretch" src="images/stretch.jpg">
       <img id="city" src="images/city.jpg">
+      <img id="360" src="images/360.jpeg">
 
       <video id="city" autoplay loop="true" src="video/city.mp4"></video>
       <video id="mountain" autoplay loop="true" src="video/mountain.mp4"></video>
@@ -222,7 +223,7 @@ align="center"
 
 
 <!-- // BACKGROUND 360 LOAD -->
-<a-sky src="#skyTexture"></a-sky>
+<a-sky src="#360"></a-sky>
 <!-- <a-videosphere src="#city"></a-videosphere> -->
 
 </a-scene>
