--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
       <img id="stretch" src="images/stretch.jpg">
       <img id="city" src="images/city.jpg">
       <img id="360" src="images/360.jpeg">
+      <img id="crouch" src="images/crouch.png">
 
       <video id="city" autoplay loop="true" src="video/city.mp4"></video>
       <video id="mountain" autoplay loop="true" src="video/mountain.mp4"></video>
-      <video id="sarah360" autoplay loop="true" src="video/Sarah360.mp4"></video>
+      <video id="pixel" autoplay loop="true" src="video/pixel.mov"></video>
 
       <a-asset-item id="tower-obj" src="models/model.obj"></a-asset-item>
       <a-asset-item id="tower-mtl" src="models/materials.mtl"></a-asset-item>
@@ -67,6 +68,11 @@
       <a-asset-item id="city3-mtl" src="models/city3.mtl"></a-asset-item>
       <a-asset-item id="cityside-obj" src="models/cityside.obj"></a-asset-item>
       <a-asset-item id="cityside-mtl" src="models/cityside.mtl"></a-asset-item>
+      <a-asset-item id="crouch-obj" src="models/crouch.obj"></a-asset-item>
+      <a-asset-item id="crouch-mtl" src="models/crouch.mtl"></a-asset-item>
+      <a-asset-item id="jackin_text-obj" src="models/jackin_text.obj"></a-asset-item>
+      <a-asset-item id="jackin_text-mtl" src="models/jackin_text.mtl"></a-asset-item>
+
 
     </a-assets>
 
@@ -134,7 +140,7 @@ material="src: #rainbow">
   material="src: #sit"
   position = "-11.29241 -6.18636 -9.25724"
   animation="property: rotation;
-  to: 0 360 0;
+  to: 0 0 360;
   dur: 15000;
   easing: linear;
   loop: true;">
@@ -146,6 +152,13 @@ position="7.31531 8.6184 -13.49873"
 rotation="-1.627773095966669 2.852756861956369 -5.420180741937588"
 scale="5.96397 5.96397 5.96397"
 material="src: #stretch">
+</a-entity>
+
+<a-entity <a-entity="" obj-model="obj: models/crouch.obj"
+position="-7.04612 -0.94081 30.46384"
+rotation="10.943493886998723 121.49856524646673 2.573153457932527"
+scale="1.61912 1.61912 1.61912"
+material="src: #crouch">
 </a-entity>
 
 <!-- <a-entity <a-entity=""
@@ -184,17 +197,33 @@ scale="3 3 3"
 material="src: #city">
 </a-entity>
 
+<!-- ---------------------- ADDING TEXT  -->
+<a-entity text-geometry="value: we are offering you the chance to LOSE YOUR BODY; weight: bold"
+position="-8 7 -10" material="color: #ffffff" scale="0.65 1 3.62"
+position = "-8 0 0"
+animation="property: rotation;
+to: 0 360 0;
+dur: 15000;
+easing: linear;
+loop: true;">
+</a-entity>
+
+<a-entity <a-entity="" obj-model="obj: models/jackin_text.obj" position="-7.91599 11.12738 -4.88622" rotation="18.13927083604673 95.13104751454624 -0.4801386323196299" scale="0.1 0.1 0.1" material="color: #63e765">
+</a-entity>
 
 
 
 
 
-<!-- //camera rig -->
+<!-- //------------------------camera rig -->
   <a-entity id= "rig" movement-controls rotation= "0 0 0" position= "0 0 0">
-  <a-entity camera position= "0 1.6 0" look-controls= "pointerLockEnable:true">
-  </a-entity>
-  <a-box static-body= "shape:box; mass:0" position= "0 0 0" width = "1" height = "1" depth="1" visible= "false">
-  </a-box>
+      <a-entity camera position= "0 1.6 0" look-controls= "pointerLockEnable:true">
+        <a-entity <a-entity="" text-geometry="value: hello are you my friend?; weight: bold" material="color: #f0e02e" position="-3.87956 -3.388 -4.37223" rotation="" scale="">
+        </a-entity>
+      </a-entity>
+      <a-box static-body= "shape:box; mass:0" position= "0 0 0" width = "1" height = "1" depth="1" visible= "false">
+      </a-box>
+
   </a-entity>
 
   <!-- /dynamic Box -->
@@ -268,7 +297,7 @@ loop: true;">
 </a-entity> -->
 
 <!-- // INSERTING SMALL VIDEO -->
-<!-- <a-video src="#mountain" width="16" height="9" position="0 0 -10"></a-video>
+<!-- <a-video src="#pixel" position="-0.06998 1.44575 -4.02095" width="16" height="9"></a-video> -->
 <!-- // TEXT LOAD -->
 <!-- <a-text>
 value="Hello!"
