--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <img id="360" src="images/360.jpeg">
       <img id="crouch" src="images/crouch.png">
 
-      <video id="city" autoplay loop="true" src="video/city.mp4"></video>
+      <video id="cityvid" autoplay loop="true" src="video/city.mp4"></video>
       <video id="mountain" autoplay loop="true" src="video/mountain.mp4"></video>
-      <video id="pixel" autoplay loop="true" src="video/pixel.mov"></video>
+      <video id="pixel" autoplay loop="true" src="video/pixel.mp4"></video>
 
       <a-asset-item id="tower-obj" src="models/model.obj"></a-asset-item>
       <a-asset-item id="tower-mtl" src="models/materials.mtl"></a-asset-item>
@@ -104,7 +104,13 @@ scale="0.57569 0.57569 0.57569"
   to: 0 360 0;
   dur: 3000;
   easing: linear;
-  loop: true;">
+  loop: true;"
+  animation__pos = "property:position;
+  to:-7.82955 10.08 -28.32923;
+  dur: 5000;
+  loop: true;
+  easing: linear;
+  dir: alternate">
 </a-entity>
 
 <a-entity <a-entity=""
@@ -138,12 +144,7 @@ material="src: #rainbow">
   rotation="11.33032 39.13759 -5.558263570564116"
   scale="4.89589 4.89589 4.89589"
   material="src: #sit"
-  position = "-11.29241 -6.18636 -9.25724"
-  animation="property: rotation;
-  to: 0 0 360;
-  dur: 15000;
-  easing: linear;
-  loop: true;">
+  position = "-11.29241 -6.18636 -9.25724">
 </a-entity>
 
 <a-entity <a-entity=""
@@ -155,7 +156,7 @@ material="src: #stretch">
 </a-entity>
 
 <a-entity <a-entity="" obj-model="obj: models/crouch.obj"
-position="-7.04612 -0.94081 30.46384"
+position="-11.401 -0.94081 30.46384"
 rotation="10.943493886998723 121.49856524646673 2.573153457932527"
 scale="1.61912 1.61912 1.61912"
 material="src: #crouch">
@@ -198,14 +199,19 @@ material="src: #city">
 </a-entity>
 
 <!-- ---------------------- ADDING TEXT  -->
-<a-entity text-geometry="value: we are offering you the chance to LOSE YOUR BODY; weight: bold"
-position="-8 7 -10" material="color: #ffffff" scale="0.65 1 3.62"
-position = "-8 0 0"
+<a-entity text-geometry="value: I splatter and spit; weight: bold"
+position="5 18.226 -26.350" material="color: #27e8e2" scale="2 2 7"
 animation="property: rotation;
-to: 0 360 0;
-dur: 15000;
+to: 0 90 0;
+dur: 5000;
 easing: linear;
-loop: true;">
+loop: true;"
+animation__pos = "property:position;
+to: -2.519 4.792 -23.663;
+dur: 5000;
+loop: true;
+easing: linear;
+dir: alternate">
 </a-entity>
 
 <a-entity <a-entity="" obj-model="obj: models/jackin_text.obj" position="-7.91599 11.12738 -4.88622" rotation="18.13927083604673 95.13104751454624 -0.4801386323196299" scale="0.1 0.1 0.1" material="color: #63e765">
@@ -218,12 +224,12 @@ loop: true;">
 <!-- //------------------------camera rig -->
   <a-entity id= "rig" movement-controls rotation= "0 0 0" position= "0 0 0">
       <a-entity camera position= "0 1.6 0" look-controls= "pointerLockEnable:true">
-        <a-entity <a-entity="" text-geometry="value: hello are you my friend?; weight: bold" material="color: #f0e02e" position="-3.87956 -3.388 -4.37223" rotation="" scale="">
+        <a-entity <a-entity="" text-geometry="value: hello can you hear me?; weight: bold" material="color: #f0e02e" position="-3.87956 -3.388 -4.37223" rotation="" scale="">
+        </a-entity>
         </a-entity>
       </a-entity>
       <a-box static-body= "shape:box; mass:0" position= "0 0 0" width = "1" height = "1" depth="1" visible= "false">
       </a-box>
-
   </a-entity>
 
   <!-- /dynamic Box -->
@@ -297,7 +303,7 @@ loop: true;">
 </a-entity> -->
 
 <!-- // INSERTING SMALL VIDEO -->
-<!-- <a-video src="#pixel" position="-0.06998 1.44575 -4.02095" width="16" height="9"></a-video> -->
+<a-video src="#pixel" width="9" height="16" position="0 0 -10"></a-video>
 <!-- // TEXT LOAD -->
 <!-- <a-text>
 value="Hello!"
